service-mesh/lets-chat/templates/destination-rule-lets-chat-main.yaml

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: lets-chat
spec:
  host: main
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
